# shorts-automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  test_preview.py
src/: __init__.py  config.py  main.py  models.py
src/agents/: __init__.py  base.py  image_agent.py  script_agent.py  supervisor_agent.py  trend_agent.py  upload_agent.py  video_agent.py  voice_agent.py
src/workflows/: __init__.py  main_workflow.py
